# stream-ripper

./: .gitignore  Cargo.toml  README.md  config.toml
src/: args.rs  cli_args.rs  config.rs  lib.rs  main.rs  metadata_variables.rs  stream_config.rs  stream_handler.rs  stream_manager.rs
