[package]
name = "stream-ripper"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.26", features = ["serde"] }
flexi_logger = "0.29.8"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
anyhow = "1.0.97"
chrono = "0.4.40"
ctrlc = "3.4.5"
